Bug 1686002 - Don't retarget touches if they land inside a clickable element. r=botond

Touches that land on a descendant of a clickable element should
not get retargeted to other nearby elements because the descendant
itself can react to those touch events.

Differential Revision: https://phabricator.services.mozilla.com/D102827